--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
                         <li><a href="#restaurants">Restaurants</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
