SEO Quick Wins: Optimize title tag, add FAQ schema for rich snippets, add last updated date

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Primary Meta Tags -->
-    <title>Austin Gluten Free Restaurants | Best GF Dining in Austin, Texas 2025</title>
-    <meta name="title" content="Austin Gluten Free Restaurants | Best GF Dining in Austin, Texas 2025">
+    <title>Austin Gluten Free | 30+ Best Gluten-Free Restaurants in Austin, TX</title>
+    <meta name="title" content="Austin Gluten Free | 30+ Best Gluten-Free Restaurants in Austin, TX">
     <meta name="description" content="Discover 30+ verified gluten-free restaurants in Austin, TX. Celiac-safe dining with dedicated menus, certified kitchens & multiple locations. Find the best gluten-free food near you!">
     <meta name="keywords" content="gluten free restaurants Austin, celiac friendly dining Austin Texas, gluten free food Austin, best gluten free restaurants Austin, celiac disease dining Austin, gluten free bakery Austin, Austin GF restaurants, wheat free dining Austin, gluten intolerance restaurants Austin, dedicated gluten free menu Austin">
     <meta name="author" content="Austin Gluten Free">
@@ -100,6 +100,64 @@
         "sameAs": "https://en.wikipedia.org/wiki/Austin,_Texas"
       },
       "knowsAbout": ["Gluten Free Dining", "Celiac Disease", "Food Allergies", "Restaurant Directory"]
+    }
+    </script>
+    
+    <!-- FAQ Schema for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What are the best gluten-free restaurants in Austin?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Austin has 30+ excellent gluten-free restaurants including Salt Traders (100% gluten-free seafood), Bom Bakeshop (dedicated GF bakery), Picnik (healthy café with GF options), and True Food Kitchen (extensive GF menu). Many offer dedicated gluten-free kitchens and celiac-safe protocols."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are there 100% gluten-free restaurants in Austin?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes! Salt Traders Coastal Cooking is a 100% dedicated gluten-free seafood restaurant in downtown Austin. Bom Bakeshop and Zucchini Kill are also 100% gluten-free bakeries offering safe options for celiacs."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Where can I find gluten-free pizza in Austin?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Several Austin restaurants offer excellent gluten-free pizza including Via 313 and many Italian restaurants with dedicated GF crust options. Check our directory for the complete list of pizza places with gluten-free options."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Which Austin restaurants have gluten-free pasta?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Il Brutto and Intero are two outstanding Italian restaurants in East Austin offering handmade gluten-free pasta. Red Ash also provides GF pasta options along with their wood-fired Italian menu."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Are Austin gluten-free restaurants safe for celiacs?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Many Austin restaurants are celiac-safe with dedicated gluten-free preparation areas, separate cooking equipment, and trained staff. Look for 100% gluten-free establishments like Salt Traders, Bom Bakeshop, and Zucchini Kill for the safest dining experiences."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Where can I get gluten-free breakfast in Austin?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Bird Bird Biscuit offers gluten-free biscuits and breakfast sandwiches. Picnik locations serve healthy GF breakfast bowls. Casa de Luz has gluten-free vegan breakfast options. Many cafes throughout Austin also offer GF breakfast items."
+          }
+        }
+      ]
     }
     </script>
 </head>
@@ -333,6 +391,7 @@
             </div>
             <div class="footer-bottom">
                 <p>&copy; 2025 Austin Gluten Free. All rights reserved.</p>
+                <p class="last-updated">Last Updated: October 22, 2025 | 30 Verified Restaurants</p>
             </div>
         </div>
     </footer>
