Fix True Food Kitchen individual pages to use correct TrueFood images

--- a/restaurants/true-food-kitchen---arboretum.html
+++ b/restaurants/true-food-kitchen---arboretum.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/true-food-kitchen---arboretum.html">
     <meta property="og:title" content="True Food Kitchen - Arboretum | Gluten-Free Mediterranean in Austin">
     <meta property="og:description" content="Health-focused Mediterranean cuisine with clearly marked gluten-free options. Seasonal menu with fresh, local ingredients. Arboretum location.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/8-1.jpg">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/TrueFood-1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -48,7 +48,7 @@
       },
       "telephone": "(512) 555-0126",
       "url": "truefoodkitchen.com",
-      "image": "https://austinglutenfree.com/images/restaurants/8-1.jpg",
+      "image": "https://austinglutenfree.com/images/restaurants/TrueFood-1.png",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.5",
@@ -88,7 +88,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/8-1.jpg" alt="True Food Kitchen - Arboretum - gluten-free restaurant in Austin" class="main-image">
+                        <img src="../images/restaurants/TrueFood-1.png" alt="True Food Kitchen - Arboretum - gluten-free restaurant in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>True Food Kitchen - Arboretum</h1>
