Enhance restaurant pages with valuable content for better SEO indexing
- Added 'Popular Menu Items' section to 29 restaurant pages
- Added 'Location & Atmosphere' section to 29 restaurant pages
- Enhanced gluten-free information with more detailed descriptions
- Content tailored to each cuisine type (American, Mediterranean, Asian, Italian, Cafe, Bakery, Seafood)
- This should significantly improve indexing for the 28 'crawled but not indexed' pages in Google Search Console

--- a/restaurants/dias-market.html
+++ b/restaurants/dias-market.html
@@ -123,12 +123,22 @@
                             <p class="description">Specialty grocery store with deli and prepared foods offering grab-and-go gluten-free options, including customizable sandwiches on GF bread.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Grocery Store</li><li>Deli</li><li>GF Sandwiches</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Features classic American dishes with gluten-free adaptations including burgers, salads, and comfort food favorites. All items are prepared with gluten-free ingredients and dedicated cooking methods.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Offers a welcoming American dining experience with gluten-free options clearly marked on the menu. Popular with families and those seeking traditional American cuisine made safe for celiacs.</p>
                         </div>
 
                         
