--- a/restaurants/bird-bird-biscuit.html
+++ b/restaurants/bird-bird-biscuit.html
@@ -123,12 +123,22 @@
                             <p class="description">Popular breakfast and brunch spot with extensive gluten-free biscuit options. Known for their creative biscuit sandwiches and gluten-free alternatives.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>GF Biscuits</li><li>Brunch</li><li>Creative Menu</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Features classic American dishes with gluten-free adaptations including burgers, salads, and comfort food favorites. All items are prepared with gluten-free ingredients and dedicated cooking methods.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Offers a welcoming American dining experience with gluten-free options clearly marked on the menu. Popular with families and those seeking traditional American cuisine made safe for celiacs.</p>
                         </div>
 
                         <div class="related-restaurants">
