--- a/restaurants/bom-bakeshop.html
+++ b/restaurants/bom-bakeshop.html
@@ -123,12 +123,22 @@
                             <p class="description">Gluten-free bakery specializing in mochi donuts, operated by a celiac owner and her chef husband. Completely safe environment.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Dedicated GF</li><li>Mochi Donuts</li><li>Celiac Owned</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Specializes in gluten-free baked goods including breads, pastries, and desserts. All items are made in dedicated gluten-free facilities with certified gluten-free ingredients.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Provides a dedicated gluten-free bakery experience with fresh-baked goods made daily. Completely safe for celiacs with no cross-contamination risk.</p>
                         </div>
 
                         <div class="related-restaurants">
