--- a/restaurants/casa-de-luz.html
+++ b/restaurants/casa-de-luz.html
@@ -123,12 +123,22 @@
                             <p class="description">Plant-based Mexican cuisine with many naturally gluten-free options. Fresh, organic ingredients and a warm, community atmosphere.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Plant-Based</li><li>Organic</li><li>Community Space</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Provides cafe-style dining with gluten-free options including breakfast items, sandwiches, and light meals. Many items are naturally gluten-free or specially prepared.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Offers a casual cafe atmosphere with gluten-free options clearly marked. Popular for breakfast, lunch, and light dining with celiac-safe options.</p>
                         </div>
 
                         
