--- a/restaurants/flower-child---round-rock.html
+++ b/restaurants/flower-child---round-rock.html
@@ -123,12 +123,22 @@
                             <p class="description">Flower Child Round Rock offers healthy Mediterranean-inspired cuisine with clearly marked gluten-free options. Located in Round Rock with fresh, organic ingredients and customizable meals.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Organic</li><li>Customizable</li><li>Healthy Options</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Specializes in Mediterranean cuisine with extensive gluten-free options including fresh salads, grilled proteins, and traditional dishes adapted for gluten-free diners.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Provides an authentic Mediterranean dining experience with healthy, gluten-free options. Known for fresh ingredients and traditional cooking methods adapted for celiac-safe dining.</p>
                         </div>
 
                         <div class="related-restaurants">
