--- a/restaurants/koriente.html
+++ b/restaurants/koriente.html
@@ -123,12 +123,22 @@
                             <p class="description">Asian fusion restaurant with many gluten-free options. Fresh, healthy bowls and traditional Asian dishes made gluten-free.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Asian Fusion</li><li>Fresh Bowls</li><li>Healthy Options</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Offers Asian fusion cuisine with many gluten-free options including fresh bowls, traditional Asian dishes, and healthy alternatives made with gluten-free ingredients.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Delivers authentic Asian flavors with gluten-free adaptations. Popular for fresh, healthy Asian cuisine made safe for those with gluten sensitivities.</p>
                         </div>
 
                         <div class="related-restaurants">
