--- a/restaurants/picnik---barton-springs.html
+++ b/restaurants/picnik---barton-springs.html
@@ -125,10 +125,20 @@
 
                         <div class="section">
                             <h2>Gluten-Free Information</h2>
-                            <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
+                            <p>Picnik Barton Springs is a 100% gluten-free restaurant, making it completely safe for celiacs and those with gluten sensitivities. They use dedicated gluten-free ingredients and preparation methods throughout their kitchen.</p>
                             <ul class="gf-features">
                                 <li>100% GF</li><li>Paleo Options</li><li>Organic Ingredients</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Picnik is famous for their bulletproof coffee, made with grass-fed butter and MCT oil. Their menu features healthy American cuisine including grass-fed burgers, fresh salads, and nutrient-dense bowls. All items are gluten-free and many are paleo-friendly.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Located on Barton Springs Road near Zilker Park, Picnik Barton Springs offers a casual, health-focused dining experience. The restaurant is popular with fitness enthusiasts and those seeking clean, nutritious meals in Austin.</p>
                         </div>
 
                         <div class="related-restaurants">
