--- a/restaurants/red-ash.html
+++ b/restaurants/red-ash.html
@@ -123,12 +123,22 @@
                             <p class="description">Wood-fired Italian restaurant featuring handmade pastas, pristine seafood, and locally sourced prime meats. Offers gluten-free options and can accommodate dietary restrictions.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Wood-Fired</li><li>Italian Cuisine</li><li>Gluten-Free Options</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Features Italian cuisine with gluten-free pasta options and traditional dishes adapted for celiac-safe dining. Many items are naturally gluten-free or specially prepared.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Offers authentic Italian dining with gluten-free options including handmade pasta and traditional Italian dishes made safe for gluten-sensitive diners.</p>
                         </div>
 
                         <div class="related-restaurants">
