--- a/restaurants/salt-traders-coastal-cooking.html
+++ b/restaurants/salt-traders-coastal-cooking.html
@@ -123,12 +123,22 @@
                             <p class="description">100% dedicated gluten-free seafood restaurant offering dishes like flat top fish tacos and clam chowder. Completely safe for celiacs.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>100% GF Kitchen</li><li>Seafood</li><li>Celiac Safe</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Features fresh seafood with gluten-free preparations and sauces. Many seafood dishes are naturally gluten-free and prepared with celiac-safe methods.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Offers coastal dining with fresh seafood and gluten-free options. Known for quality seafood prepared safely for those with gluten sensitivities.</p>
                         </div>
 
                         
