--- a/restaurants/snap-kitchen---cedar-park.html
+++ b/restaurants/snap-kitchen---cedar-park.html
@@ -123,12 +123,22 @@
                             <p class="description">Grab-and-go healthy meals with many gluten-free options. Perfect for busy professionals who need quick, safe meals. Cedar Park location.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Grab & Go</li><li>Healthy Meals</li><li>Quick Service</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Features classic American dishes with gluten-free adaptations including burgers, salads, and comfort food favorites. All items are prepared with gluten-free ingredients and dedicated cooking methods.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Offers a welcoming American dining experience with gluten-free options clearly marked on the menu. Popular with families and those seeking traditional American cuisine made safe for celiacs.</p>
                         </div>
 
                         <div class="related-restaurants">
