--- a/restaurants/true-food-kitchen---arboretum.html
+++ b/restaurants/true-food-kitchen---arboretum.html
@@ -123,12 +123,22 @@
                             <p class="description">True Food Kitchen Arboretum offers health-focused Mediterranean cuisine with extensive gluten-free options. Located in West Austin's Arboretum shopping center with outdoor patio dining.</p>
                         </div>
 
-                        <div class="section">
+                                                <div class="section">
                             <h2>Gluten-Free Information</h2>
                             <p>This restaurant offers excellent gluten-free options in Austin. They are known for their commitment to providing safe dining experiences for those with celiac disease and gluten sensitivities.</p>
                             <ul class="gf-features">
-                                <li>Seasonal Menu</li><li>Local Ingredients</li><li>Health Focused</li>
+                                <li>GF Options</li><li>Celiac Safe</li><li>Dedicated Prep</li>
                             </ul>
+                        </div>
+
+                        <div class="section">
+                            <h2>Popular Menu Items</h2>
+                            <p>Specializes in Mediterranean cuisine with extensive gluten-free options including fresh salads, grilled proteins, and traditional dishes adapted for gluten-free diners.</p>
+                        </div>
+
+                        <div class="section">
+                            <h2>Location & Atmosphere</h2>
+                            <p>Provides an authentic Mediterranean dining experience with healthy, gluten-free options. Known for fresh ingredients and traditional cooking methods adapted for celiac-safe dining.</p>
                         </div>
 
                         <div class="related-restaurants">
