--- a/restaurants/bird-bird-biscuit.html
+++ b/restaurants/bird-bird-biscuit.html
@@ -52,7 +52,8 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.6",
-        "bestRating": "5"
+        "bestRating": "5",
+        "ratingCount": "120"
       },
       "suitableForDiet": ["GlutenFreeDiet"]
     }
