--- a/restaurants/flower-child---south-lamar.html
+++ b/restaurants/flower-child---south-lamar.html
@@ -52,7 +52,8 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.3",
-        "bestRating": "5"
+        "bestRating": "5",
+        "ratingCount": "95"
       },
       "suitableForDiet": ["GlutenFreeDiet"]
     }
