--- a/restaurants/postino---south-lamar.html
+++ b/restaurants/postino---south-lamar.html
@@ -52,7 +52,8 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.7",
-        "bestRating": "5"
+        "bestRating": "5",
+        "ratingCount": "150"
       },
       "suitableForDiet": ["GlutenFreeDiet"]
     }
