--- a/restaurants/salt-traders-coastal-cooking.html
+++ b/restaurants/salt-traders-coastal-cooking.html
@@ -52,7 +52,8 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.8",
-        "bestRating": "5"
+        "bestRating": "5",
+        "ratingCount": "150"
       },
       "suitableForDiet": ["GlutenFreeDiet"]
     }
