--- a/restaurants/snap-kitchen---cedar-park.html
+++ b/restaurants/snap-kitchen---cedar-park.html
@@ -52,7 +52,8 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.0",
-        "bestRating": "5"
+        "bestRating": "5",
+        "ratingCount": "75"
       },
       "suitableForDiet": ["GlutenFreeDiet"]
     }
