--- a/restaurants/flower-child---domain.html
+++ b/restaurants/flower-child---domain.html
@@ -9,7 +9,7 @@
     <script src="https://the.gatekeeperconsent.com/cmp.min.js" data-cfasync="false"></script>
     
     <!-- Ezoic Header Script -->
-    <script async src="//www.ezojs.com/ezoic/sa.min.js"></script>
+    <script async src="https://www.ezojs.com/ezoic/sa.min.js"></script>
     <script>
         window.ezstandalone = window.ezstandalone || {};
         ezstandalone.cmd = ezstandalone.cmd || [];
