--- a/restaurants/bird-bird-biscuit.html
+++ b/restaurants/bird-bird-biscuit.html
@@ -15,6 +15,15 @@
         ezstandalone.cmd = ezstandalone.cmd || [];
     </script>
     
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C0CQSR91PD"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-C0CQSR91PD');
+    </script>
+    
 <!-- Primary Meta Tags -->
     <title>Bird, Bird Biscuit | Gluten-Free American in East Austin | Austin Gluten Free</title>
     <meta name="title" content="Bird, Bird Biscuit | Gluten-Free American in East Austin">
