Remove specific references to Arin Brown, use team-focused language

--- a/about.html
+++ b/about.html
@@ -29,8 +29,8 @@
      crossorigin="anonymous"></script>
 
     <title>About Austin Gluten Free | Our Mission, Team & Verification Process</title>
-    <meta name="description" content="Learn how Austin Gluten Free vets restaurants, meet founder Arin Brown, and see the standards behind Austin's trusted gluten-free dining directory.">
-    <meta name="keywords" content="about Austin Gluten Free, Arin Brown, gluten free advocate Austin, celiac safe restaurants, gluten free verification process">
+    <meta name="description" content="Learn how Austin Gluten Free vets restaurants, meet our team, and see the standards behind Austin's trusted gluten-free dining directory.">
+    <meta name="keywords" content="about Austin Gluten Free, gluten free advocate Austin, celiac safe restaurants, gluten free verification process">
     <meta name="author" content="Austin Gluten Free">
     <link rel="canonical" href="https://austinglutenfree.com/about.html">
 
@@ -43,7 +43,7 @@
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="About Austin Gluten Free | Our Mission & Verification Process">
-    <meta name="twitter:description" content="Founded by celiac advocate Arin Brown, Austin Gluten Free vets restaurants so you can dine with confidence.">
+    <meta name="twitter:description" content="Founded by celiac advocates, Austin Gluten Free vets restaurants so you can dine with confidence.">
     <meta name="twitter:image" content="https://austinglutenfree.com/images/hero-background.jpg">
 
     <link rel="icon" type="image/x-icon" href="https://austinglutenfree.com/images/logos/logo.png">
@@ -78,10 +78,9 @@
         ]
       },
       "mainEntity": {
-        "@type": "Person",
-        "name": "Arin Brown",
-        "jobTitle": "Founder & Celiac Advocate",
-        "image": "https://austinglutenfree.com/images/logos/logo.png",
+        "@type": "Organization",
+        "name": "Austin Gluten Free",
+        "url": "https://austinglutenfree.com",
         "email": "info@austinglutenfree.com",
         "sameAs": [
           "https://www.instagram.com/austinglutenfree",
@@ -127,9 +126,9 @@
             <p style="text-align:center;color:#6c757d;font-style:italic;">Updated November 9, 2025</p>
             <p>Austin Gluten Free exists to take the guesswork out of dining for people living with celiac disease, wheat allergies, and gluten sensitivity. Since launching in 2018, we’ve visited hundreds of restaurants across Central Texas, interviewed chefs about their prep spaces, and tracked menu changes so you can spend more time enjoying meals and less time worrying about cross-contact.</p>
 
-            <h2 id="team">Meet Arin Brown, Founder &amp; Lead Researcher</h2>
-            <p>Arin was diagnosed with celiac disease in 2012 and quickly realized how much misinformation surrounded “gluten-free friendly” labels. After moving to Austin, Arin began building a living spreadsheet of safe dishes and chefs who understood strict dietary needs. That spreadsheet evolved into Austin Gluten Free—now the city’s most comprehensive directory of vetted GF restaurants.</p>
-            <p>Arin hosts quarterly community meetups, consults with hospitality teams on allergen training, and speaks at local wellness events. When not documenting menus, Arin can be found testing new flour blends in the kitchen, exploring Hill Country hikes, or sharing GF travel tips on Instagram <a href="https://www.instagram.com/austinglutenfree" target="_blank" rel="noopener">@austinglutenfree</a>.</p>
+            <h2 id="team">Our Team &amp; Mission</h2>
+            <p>Our founder was diagnosed with celiac disease in 2012 and quickly realized how much misinformation surrounded "gluten-free friendly" labels. After moving to Austin, we began building a living spreadsheet of safe dishes and chefs who understood strict dietary needs. That spreadsheet evolved into Austin Gluten Free—now the city's most comprehensive directory of vetted GF restaurants.</p>
+            <p>Our team hosts quarterly community meetups, consults with hospitality teams on allergen training, and speaks at local wellness events. When not documenting menus, we can be found testing new flour blends in the kitchen, exploring Hill Country hikes, or sharing GF travel tips on Instagram <a href="https://www.instagram.com/austinglutenfree" target="_blank" rel="noopener">@austinglutenfree</a>.</p>
 
             <h2>Our Verification Checklist</h2>
             <p>Restaurants are only added to Austin Gluten Free after passing a 9-point safety review. We revisit each location at least once per quarter and update listings immediately if processes change.</p>
@@ -153,13 +152,13 @@
             <h2>Community Involvement</h2>
             <ul style="margin-left:1.5rem;line-height:1.8;">
                 <li><strong>Celiac Support Meetings:</strong> Monthly informal meetups at rotating restaurants to gather real-time feedback.</li>
-                <li><strong>Restaurant Trainings:</strong> Arin provides complimentary 45-minute sessions for chefs rolling out new allergen protocols.</li>
+                <li><strong>Restaurant Trainings:</strong> Our team provides complimentary 45-minute sessions for chefs rolling out new allergen protocols.</li>
                 <li><strong>Gluten-Free Welcome Kits:</strong> New to Austin? Request a digital welcome kit with grocery store maps, dedicated bakeries, and medical provider recommendations.</li>
                 <li><strong>Newsletter:</strong> Join thousands of subscribers receiving alerts on new GF openings, product recalls, and community events.</li>
             </ul>
 
             <h2>Media &amp; Speaking</h2>
-            <p>Need a speaker for your next wellness panel, hospitality training, or podcast episode? Arin has spoken at SXSW Wellness Expo, Austin Food &amp; Wine Festival workshops, and University of Texas nutrition courses. Topics include “Designing Allergen-Safe Kitchens,” “Navigating Travel with Celiac Disease,” and “Building Trust with Gluten-Free Diners.”</p>
+            <p>Need a speaker for your next wellness panel, hospitality training, or podcast episode? Our team has spoken at SXSW Wellness Expo, Austin Food &amp; Wine Festival workshops, and University of Texas nutrition courses. Topics include "Designing Allergen-Safe Kitchens," "Navigating Travel with Celiac Disease," and "Building Trust with Gluten-Free Diners."</p>
             <p>To request an interview or collaboration, contact <a href="mailto:press@austinglutenfree.com">press@austinglutenfree.com</a>.</p>
 
             <h2>Contact &amp; Transparency</h2>
