--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -68,8 +68,8 @@
       "description": "Local tips, safe restaurants, bakery crawls, itineraries, and resources for gluten-free dining in Austin, Texas.",
       "image": "https://austinglutenfree.com/images/hero-background.jpg",
       "author": {
-        "@type": "Person",
-        "name": "Arin Brown",
+        "@type": "Organization",
+        "name": "Austin Gluten Free",
         "url": "https://austinglutenfree.com/about.html"
       },
       "publisher": {
@@ -117,7 +117,7 @@
 
         <article class="seo-content" style="margin-top:2rem;">
             <h1 style="text-align:center;">Ultimate Gluten-Free Dining Guide to Austin (2025 Update)</h1>
-            <p style="text-align:center;color:#6c757d;font-style:italic;">Last updated November 9, 2025 • Written by Arin Brown, celiac advocate & founder of Austin Gluten Free</p>
+            <p style="text-align:center;color:#6c757d;font-style:italic;">Last updated November 9, 2025 • Written by the Austin Gluten Free team</p>
 
             <section>
                 <h2>How to Use This Guide</h2>
