--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <h2>About Austin Gluten Free</h2>
                 <div class="about-content">
                     <div class="about-text">
-                        <p>Austin Gluten Free is your comprehensive directory for gluten-free dining in Austin, Texas. Founded by local celiac advocate Arin Brown, the site began as a personal spreadsheet of safe meals and has grown into a citywide resource trusted by newly diagnosed diners, travelers, and lifelong Austinites alike.</p>
+                        <p>Austin Gluten Free is your comprehensive directory for gluten-free dining in Austin, Texas. Founded by local celiac advocates, the site began as a personal spreadsheet of safe meals and has grown into a citywide resource trusted by newly diagnosed diners, travelers, and lifelong Austinites alike.</p>
                         <p>Every restaurant featured here is verified through in-person visits, staff interviews, and ongoing check-ins with the gluten-free community. We document which dishes are prepared in separate kitchens, which require modifications, and where dedicated GF equipment is used. Whether you're craving comfort food, upscale tasting menus, or family-friendly brunch, we're committed to helping you dine without worry.</p>
                         
                         <div class="features">
@@ -397,7 +397,7 @@
                             <p>Austin's gluten-free scene includes American comfort food, authentic Mexican cuisine, Italian pasta and pizza made with GF flour, Asian dishes using rice noodles and tamari, Mediterranean fare, and dedicated gluten-free bakeries offering fresh bread, pastries, and desserts.</p>
                             
                             <h4>Who Runs Austin Gluten Free?</h4>
-                            <p>Arin Brown launched Austin Gluten Free after years of navigating menus while managing celiac disease. Arin regularly hosts meetups, attends restaurant trainings, and partners with local dietitians to keep this directory accurate. Have feedback or want to collaborate on new guides? Reach out at <a href="mailto:info@austinglutenfree.com">info@austinglutenfree.com</a>.</p>
+                            <p>Our team launched Austin Gluten Free after years of navigating menus while managing celiac disease. We regularly host meetups, attend restaurant trainings, and partner with local dietitians to keep this directory accurate. Have feedback or want to collaborate on new guides? Reach out at <a href="mailto:info@austinglutenfree.com">info@austinglutenfree.com</a>.</p>
                         </article>
                     </div>
                 </div>
