Remove Sweet Ritual (closed) and add Bougie's Donuts & Coffee with verified contact info

--- a/guides/gluten-free-austin-guide.html
+++ b/guides/gluten-free-austin-guide.html
@@ -151,7 +151,7 @@
             <section id="itineraries">
                 <h2>Three Sample Gluten-Free Itineraries</h2>
                 <h3>Weekend Getaway (Friday–Sunday)</h3>
-                <p><strong>Friday:</strong> Arrive in time for dinner at <a href="../restaurants/koriente.html">Koriente</a> in East Austin for GF noodle bowls. Grab dessert at <a href="../restaurants/sweet-ritual.html">Sweet Ritual</a>, where every scoop is gluten-free and dairy-free.</p>
+                <p><strong>Friday:</strong> Arrive in time for dinner at <a href="../restaurants/koriente.html">Koriente</a> in East Austin for GF noodle bowls. Grab dessert at <a href="../restaurants/bougies-donuts---coffee.html">Bougie's Donuts & Coffee</a> in Sunset Valley for gluten-free donuts and coffee.</p>
                 <p><strong>Saturday:</strong> Kick off with <a href="../restaurants/the-steeping-room.html">The Steeping Room</a> for GF scones, then explore downtown murals before lunch at <a href="../restaurants/casa-de-luz.html">Casa de Luz</a>. End the day with tapas at <a href="../restaurants/odd-duck.html">Odd Duck</a>—their team excels at accommodating gluten-free tasting menus.</p>
                 <p><strong>Sunday:</strong> Brunch at <a href="../restaurants/picnik---barton-springs.html">Picnik Barton Springs</a>, stroll Zilker Park, and finish with bakery boxes from <a href="../restaurants/zucchini-kill.html">Zucchini Kill</a> to take on the road.</p>
 
@@ -180,7 +180,7 @@
                 <h2>Dedicated Gluten-Free Bakeries &amp; Sweet Treats</h2>
                 <p>Austin is home to several fully gluten-free bakeries and dessert pop-ups. Follow them on social media for drop schedules and holiday specials.</p>
                 <p><strong><a href="../restaurants/bom-bakeshop.html">Bom Bakeshop</a></strong> serves seasonal kolaches, tres leches cake, and savory hand pies. Pre-order online or visit Saturday farmers markets. <strong><a href="../restaurants/zucchini-kill.html">Zucchini Kill</a></strong> keeps punk vibes alive with GF cupcakes, Twinkie-style pastries, and rotating vegan treats.</p>
-                <p>Craving ice cream? <strong><a href="../restaurants/sweet-ritual.html">Sweet Ritual</a></strong> is entirely gluten-free and offers cones made from millet and sorghum. For birthday cakes, check <strong><a href="../restaurants/picnik---burnet-road.html">Picnik</a></strong> or <strong><a href="../restaurants/intero.html">Intero</a></strong> for beautifully plated desserts free of gluten cross-contact.</p>
+                <p>Craving donuts? <strong><a href="../restaurants/bougies-donuts---coffee.html">Bougie's Donuts & Coffee</a></strong> in Sunset Valley is entirely gluten-free and offers artisanal donuts and premium coffee. For birthday cakes, check <strong><a href="../restaurants/picnik---burnet-road.html">Picnik</a></strong> or <strong><a href="../restaurants/intero.html">Intero</a></strong> for beautifully plated desserts free of gluten cross-contact.</p>
             </section>
 
             <section id="events">
