Update image filenames for Bougie's and Nômadé to use PNG files

--- a/restaurants/bougies-donuts---coffee.html
+++ b/restaurants/bougies-donuts---coffee.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/bougies-donuts---coffee.html">
     <meta property="og:title" content="Bougie's Donuts & Coffee | Gluten-Free Bakery in Austin">
     <meta property="og:description" content="Gluten-free donut shop and coffee house in Sunset Valley. Specializes in artisanal gluten-free donuts and premium coffee.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/38-1.jpg">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/Bougie-1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -72,7 +72,7 @@
       },
       "telephone": "(512) 382-1617",
       "url": "bougiesdonuts.com",
-      "image": "https://austinglutenfree.com/images/restaurants/38-1.jpg",
+      "image": "https://austinglutenfree.com/images/restaurants/Bougie-1.png",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.6",
@@ -114,7 +114,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/38-1.jpg" alt="Bougie's Donuts & Coffee - gluten-free restaurant in Austin" class="main-image">
+                        <img src="../images/restaurants/Bougie-1.png" alt="Bougie's Donuts & Coffee - gluten-free restaurant in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Bougie's Donuts & Coffee</h1>
