--- a/restaurants/nomade-cocina.html
+++ b/restaurants/nomade-cocina.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://austinglutenfree.com/restaurants/nomade-cocina.html">
     <meta property="og:title" content="Nômadé Cocina | 100% Gluten-Free Restaurant in Austin">
     <meta property="og:description" content="100% gluten-free restaurant featuring Yucatán-inspired cuisine with Lebanese, Portuguese, and African influences. Award-winning raw bar with ceviches, crudos, and wood-fired specialties.">
-    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/39-1.jpg">
+    <meta property="og:image" content="https://austinglutenfree.com/images/restaurants/Nomade-1.png">
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -73,7 +73,7 @@
       },
       "telephone": "(512) 520-5440",
       "url": "https://www.nomadecocina.com",
-      "image": "https://austinglutenfree.com/images/restaurants/39-1.jpg",
+      "image": "https://austinglutenfree.com/images/restaurants/Nomade-1.png",
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.7",
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="restaurant-header">
                     <div class="restaurant-images">
-                        <img src="../images/restaurants/39-1.jpg" alt="Nômadé Cocina - 100% gluten-free restaurant in Austin" class="main-image">
+                        <img src="../images/restaurants/Nomade-1.png" alt="Nômadé Cocina - 100% gluten-free restaurant in Austin" class="main-image">
                     </div>
                     <div class="restaurant-info">
                         <h1>Nômadé Cocina</h1>
